# support-agent

./: .env.example  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  compose.override.yaml.example  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
deployment/helm/litemaas-agent/: .helmignore  Chart.yaml  values-staging.yaml  values-test.yaml  values.yaml
deployment/kustomize/base/: configmap.yaml  deployment-letta.yaml  deployment-proxy.yaml  kustomization.yaml  pvc-letta.yaml  service-letta.yaml  service-proxy.yaml
docs/: index.md
docs/architecture/: archival-memory-evaluation.md  decisions.md  diagrams.md  memory-and-learning.md  overview.md  security-review.md  security.md
docs/development/: PROJECT_PLAN.md
docs/development/tests/: README.md  (+2 more)
docs/guides/: adapting-to-another-platform.md  deployment-guide.md  developer-guide.md  frontend-integration.md  integration-contract.md
docs/reference/: api.md  authentication.md  configuration.md  guardrails.md  litellm-api.md  litemaas-api.md  modules.md  tools.md
scripts/: export-knowledge.py  log-wrapper.sh  seed-knowledge.py
src/adapters/: base.py  litemaas.py
src/agent/: bootstrap.py  config.py  memory_seeds.py  persona.py
src/guardrails/: actions.py  rails.py
src/proxy/: auth.py  rate_limit.py  routes.py  server.py  streaming.py
src/tools/: admin.py  docs.py  litellm.py  litemaas.py  memory.py
tests/guardrails/: conftest.py  test_cross_user_probing.py  test_encoding_tricks.py  test_indirect_probing.py  test_injection_attacks.py  test_jailbreak_attempts.py  test_multi_turn_manipulation.py  test_topic_rails.py
tests/integration/: conftest.py  test_conversation_isolation.py  test_red_team.py
tests/unit/: conftest.py  test_auth.py  test_bootstrap.py  test_guardrails_actions.py  test_guardrails_engine.py  test_health.py  test_memory_seeds.py  test_memory_tools.py  test_persona.py  test_rate_limit.py  test_routes.py  test_security_invariants.py  test_server.py  test_streaming.py  test_tools_admin.py  test_tools_docs.py  test_tools_litellm.py  test_tools_litemaas.py
(+33 files in other folders)
