[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/tools", "src/guardrails", "src/proxy", "src/adapters"]

[project]
name = "litemaas-agent"
version = "0.1.0"
description = "AI platform support assistant for LiteMaaS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136,<1",
    "uvicorn[standard]>=0.46,<1",
    "httpx>=0.28,<1",
    "pyjwt>=2.12,<3",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.14,<3",
    "letta-client>=1.10,<2",
    "nemoguardrails>=0.17,<1",
    "langchain-openai>=0.3,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "httpx",
    "mypy>=1.15,<2",
    "ruff>=0.15,<1",
    "types-pyjwt",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "tools", "guardrails", "proxy", "adapters"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "letta_client.*",
    "nemoguardrails.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "guardrails: marks tests as guardrail scenario tests",
    "adversarial: marks tests as adversarial guardrail tests (subset of guardrails)",
]
